# android_demo

./: README.md  build.gradle  gradlew  gradlew.bat  settings.gradle
app/: build.gradle
app/jni/: CMakeLists.txt  com_example_xiaoqiang_myapplication_jni_LibX264.c  com_example_xiaoqiang_myapplication_jni_LibX264.h
app/jni/include/: x264.h
app/src/androidTest/java/com/example/xiaoqiang/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/xiaoqiang/myapplication/: BarActivity.java  CircularProgressActivity.java  Demo1.java  GradientTextActivity.java  GradientTitleBarActivity.java  KLogActivity.java  LifecyclesActivity.java  ListButtonActivity.java  LyricTextActivity.java  MVPActivity.java  MainActivity.java  OpenGLEGLActivity.java  OpenGLEGLSurfaceActivity.java  OpenGLEsDemo.java  PlayerActivity.java  RxJava2Activity.java  SeekbarActivity.java  ThreeButtonActivity.java
app/src/main/java/com/example/xiaoqiang/myapplication/adapter/: TabFragmentAdapter.java
app/src/main/res/layout/: acitivity_lyric_text.xml  activity_algorithm.xml  activity_bar.xml  activity_circular_progress.xml  activity_design.xml  activity_gradient_title_bar.xml  activity_log.xml  activity_main.xml  activity_mvp.xml  activity_opengl.xml  activity_opengl_egl.xml  activity_rxjava.xml  activity_seekbar.xml  activity_threebutton.xml
app/src/main/res/values/: attrs.xml  strings.xml  styles.xml
app/src/test/java/com/example/xiaoqiang/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+65 files in other folders)
